# napari-vipp

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  vipp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  usage_question.yml
.github/workflows/: ci.yml
docs/: README.md  analytical-phantom-validation.md  app-improvements-plan.md  architecture.md  cache-and-memory.md  colocalization-method-notes.md  colocalization-racc-plan.md  context-aware-controls-audit.md  cucim-windows-port-plan.md  cucim-windows-source-evaluation.md  developer-notes.md  gpu-acceleration-spike.md  gpu-production-implementation-plan.md  io-user-guide.md  measurement-workflows.md  mitomorph-feature-parity.md  node-roadmap-history.md  node-roadmap.md  object-mesh-morphology-plan.md  ome-io-plan.md  operator-tips.md  planning.md  psf-and-deconvolution-plan.md  release-runbook.md  research-and-publication.md  rl-tv-validation-report.md  skeleton-nodes.md  user-guide.md
docs/assets/branding/: README.md
docs/benchmarks/: cucim-source-windows-rtx5090-build.json  cucim-source-windows-rtx5090-standard.json  gpu-spike-windows-rtx4050-smoke.json  gpu-spike-windows-rtx4050-standard.json
docs/validation/rl-tv/: psf-checks.csv  results.csv  summary.json
examples/: README.md  otsu-red-channel-labels.json  red-channel-merged-measurement-table.json  red-channel-object-intensity-measurements.json  synthetic-3d-deconvolution-rl-tv.json  synthetic-3d-mesh-morphology.json  synthetic-advanced-skeleton-network.json  synthetic-batch-provenance.json  synthetic-colocalization-racc.json  synthetic-deconvolution-rl-tv.json  synthetic-derived-object-morphology.json  synthetic-measurement-summary.json  synthetic-object-colocalization-association.json  synthetic-skeleton-qc.json
scripts/: benchmark_cucim.py  benchmark_gpu.py  build_cucim_windows.ps1  capture_vipp_docs.py  launch_vipp_intensity_workflow.py  launch_vipp_label_workflow.py  launch_vipp_sample.py  validate_calibrated_morphology_phantoms.py  validate_rl_tv_phantoms.py
src/napari_vipp/: __init__.py  __main__.py  _graph.py  _sample_data.py  _theme.py  _widget.py  napari.yaml
src/napari_vipp/_tests/: test_architecture.py  test_axis_semantics.py  test_batch.py  test_batch_controller.py  test_batch_demo.py  test_batch_navigator.py  test_batch_setup.py  test_compute.py  test_diagnostic_workers.py  test_diagnostics.py  test_documentation.py  test_example_resources.py  test_example_workflow.py  test_execution.py  test_export.py  test_file_sources.py  test_graph.py  test_graph_layout.py  test_grid.py  test_history.py  test_io.py  test_metadata.py  test_multi_output.py  test_operation_input_contracts.py  test_operations.py  test_parameter_visibility.py  test_pipeline_restore_safety.py  test_plugin_contract.py  test_preview.py  test_rl_tv_validation.py  test_sample_data.py  test_scalar_axis_filters.py  test_snapshots.py  test_source_adapter.py  test_source_identity.py  test_ui_batch.py  test_ui_dialogs.py  test_ui_plots.py  test_ui_view_dims.py  test_widget.py  (+5 more)
src/napari_vipp/core/: __init__.py  atomic_io.py  batch.py  batch_demo.py  batch_setup.py  channel_colors.py  compute.py  diagnostics.py  execution.py  export.py  file_sources.py  graph_layout.py  graph_search.py  grid.py  metadata.py  operations.py  pipeline.py  preview.py  progress.py  snapshots.py  source_identity.py  tables.py  workflow.py
src/napari_vipp/core/io/: __init__.py  microscope.py  model.py  numpy_io.py  ome_zarr.py  raster.py  registry.py  tiff.py
src/napari_vipp/examples/: otsu-red-channel-labels.json  red-channel-merged-measurement-table.json  red-channel-object-intensity-measurements.json  synthetic-3d-deconvolution-rl-tv.json  synthetic-3d-mesh-morphology.json  synthetic-advanced-skeleton-network.json  synthetic-batch-provenance.json  synthetic-colocalization-racc.json  synthetic-derived-object-morphology.json  synthetic-measurement-summary.json  synthetic-object-colocalization-association.json  synthetic-skeleton-qc.json
src/napari_vipp/nodes/: __init__.py
src/napari_vipp/ui/: __init__.py  axis_controls.py  batch.py  batch_controller.py  batch_navigator.py  controls.py  diagnostic_workers.py  dialogs.py  examples.py  file_sources.py  history.py  lifecycle.py  palette.py  plots.py  search.py  source_adapter.py  view_dims.py  workers.py
