[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-vipp"
version = "0.1.0"
description = "Visual image processing pipelines for napari"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rensu P. Theart"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = [
    "bioimage analysis",
    "fluorescence microscopy",
    "image processing",
    "napari",
    "node graph",
    "visual programming",
]
classifiers = [
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "qtpy>=2.4",
    "scikit-image>=0.21",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/rensutheart/napari-vipp"
Repository = "https://github.com/rensutheart/napari-vipp"
Issues = "https://github.com/rensutheart/napari-vipp/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "napari[pyqt6]>=0.6",
    "npe2>=0.8",
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.12",
]

[project.entry-points."napari.manifest"]
napari-vipp = "napari_vipp:napari.yaml"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["napari_vipp._tests*"]

[tool.setuptools.package-data]
napari_vipp = ["napari.yaml"]

[tool.pytest.ini_options]
testpaths = ["src/napari_vipp/_tests"]
addopts = ["-ra"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
