[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-vipp"
version = "0.11.0a2"
description = "A visual workflow platform for reproducible bioimage analysis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Rensu P. Theart"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE", "NOTICE"]
keywords = [
    "bioimage analysis",
    "fluorescence microscopy",
    "image processing",
    "napari",
    "node graph",
    "visual programming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dask[array]>=2025.2",
    "fsspec>=2024.2",
    "imageio>=2.31",
    "numpy>=1.24",
    "ome-types>=0.6",
    "ome-zarr>=0.17",
    "pillow>=10",
    "qtpy>=2.4",
    "scikit-image>=0.21",
    "scipy>=1.10",
    "tifffile>=2023.8",
    "zarr>=3.0",
]

[project.urls]
Homepage = "https://github.com/rensutheart/napari-vipp"
Documentation = "https://rensutheart.github.io/vipp-mkdocs/"
Repository = "https://github.com/rensutheart/napari-vipp"
Issues = "https://github.com/rensutheart/napari-vipp/issues"
Discussions = "https://github.com/rensutheart/napari-vipp/discussions"

[project.optional-dependencies]
czi = [
    "bioio>=3.4",
    "bioio-czi",
    "czifile[all]>=2026.6.12; python_version >= '3.12'",
]
dev = [
    "build>=1.2",
    "napari[pyqt6]>=0.6",
    "npe2>=0.8",
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.12",
]
bioformats = [
    "bioio>=3.4",
    "bioio-bioformats",
    "bioio-czi",
    "bioio-lif",
]
microscope = [
    "bioio>=3.4",
    "bioio-bioformats",
    "bioio-czi",
    "bioio-lif",
    "czifile[all]>=2026.6.12; python_version >= '3.12'",
    "liffile[all]>=2026.4.11; python_version >= '3.12'",
    "nd2>=0.11",
    "oiffile[all]>=2026.2.8; python_version >= '3.11'",
    "oirfile[all]>=2026.4.25; python_version >= '3.12'",
]
nd2 = [
    "nd2>=0.11",
]

[project.entry-points."napari.manifest"]
napari-vipp = "napari_vipp:napari.yaml"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["napari_vipp._tests*"]

[tool.setuptools.package-data]
napari_vipp = ["napari.yaml", "examples/*.json"]

[tool.pytest.ini_options]
testpaths = ["src/napari_vipp/_tests"]
addopts = ["-ra"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
